[package]
name = "comet-deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-proto = "0.39.1"
tendermint = "0.39.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.5.1", features = ["full"] }
pin-project = "1"
futures = "0.3"
tracing = "0.1"
prost = "0.13.2"
structopt = "0.3"
tracing-subscriber = "0.3.17"
tower-abci = "0.15.0"
deno_core = "0.308.0"
v8 = { version = "0.106.0", default-features = false }
deno_ast = { version = "0.42.0", features = ["transpiling"] }
reqwest = "0.12.7"
async-trait = "0.1.82"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.87"
tendermint-abci = { version = "0.39.1", features = ["client"] }

[build-dependencies]
deno_core = "0.308.0"
